# wxauto-rs

./: .gitignore  Cargo.toml  README.md  wxauto.ps1
.github/workflows/: build.yml
examples/: basic_usage.rs
src/: lib.rs  main.rs  wechat.rs
src/ui/: automation.rs  chat.rs  mod.rs
