[package]
name = "wxauto-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
] }
anyhow = "1.0"

[[bin]]
name = "wxauto-rs"
path = "src/main.rs"
